@@ -198,6 +198,10 @@ COB_EXCEPTION  (0601, COB_EC_IMP_ACCEPT,
 COB_EXCEPTION  (0602, COB_EC_IMP_DISPLAY,
 		"EC-IMP-DISPLAY", 0)
 
+/* Current UTC time cannot be found */
+COB_EXCEPTION  (0603, COB_EC_IMP_UTC_UNKNOWN,
+		"EC-IMP-UTC-UNKNOWN", 1)
+
 
 /* Any locale related exception */
 COB_EXCEPTION  (0700, COB_EC_LOCALE,
