@@ -1987,18 +1987,22 @@ add_z (const ptrdiff_t buff_pos, char *buff)
 }
 
 static void
-add_offset_time (const int with_colon, const int offset_time, const ptrdiff_t buff_pos,
-		 char *buff)
+add_offset_time (const int with_colon, int const *offset_time,
+		 const ptrdiff_t buff_pos, char *buff)
 {
 	int		hours;
 	int		minutes;
 	const char	*format_str;
 
-	hours = offset_time / 60;
-	minutes = abs (offset_time) % 60;
+	if (offset_time) {
+		hours = *offset_time / 60;
+		minutes = abs (*offset_time) % 60;
 
-	format_str = with_colon ? "%+2.2d:%2.2d" : "%+2.2d%2.2d";
-	sprintf (buff + buff_pos, format_str, hours, minutes);
+		format_str = with_colon ? "%+2.2d:%2.2d" : "%+2.2d%2.2d";
+		sprintf (buff + buff_pos, format_str, hours, minutes);
+	} else {
+		memset (buff + buff_pos, '0', 5);
+	}
 }
 
 static struct time_format
@@ -2037,7 +2041,7 @@ parse_time_format_string (const char *str)
 
 static int
 format_time (const struct time_format format, int time,
-	     cob_decimal *second_fraction, const int offset_time, char *buff)
+	     cob_decimal *second_fraction, int *offset_time, char *buff)
 {
 	int		hours;
 	int		minutes;
@@ -2045,7 +2049,7 @@ format_time (const struct time_format format, int time,
 	int		date_overflow = 0;
 	ptrdiff_t	buff_pos;
 	const char	*format_str;
-	
+
 	if (format.with_colons) {
 		format_str = "%2.2d:%2.2d:%2.2d";
 		buff_pos = 8;
@@ -2059,9 +2063,15 @@ format_time (const struct time_format format, int time,
 	time %= 3600;
 	minutes = time / 60;
 	seconds = time % 60;
+
 	if (format.extra == EXTRA_Z) {
-		hours -= offset_time / 60;
-		minutes -= offset_time % 60;
+		if (offset_time == NULL) {
+		        cob_set_exception (COB_EC_IMP_UTC_UNKNOWN);
+			return 0;
+		}
+
+		hours -= *offset_time / 60;
+		minutes -= *offset_time % 60;
 
 		/* Handle minute and hour overflow */
 		if (minutes >= 60) {
@@ -2626,7 +2636,7 @@ format_datetime (const struct date_format date_fmt,
 		 const int days,
 		 const int whole_seconds,
 		 cob_decimal *fractional_seconds,
-		 const int offset_time,
+		 int *offset_time,
 		 char *buff)
 {
 	int	overflow;
@@ -2636,7 +2646,7 @@ format_datetime (const struct date_format date_fmt,
 	overflow = format_time (time_fmt, whole_seconds, fractional_seconds,
 				offset_time, formatted_time);
 	format_date (date_fmt, days + overflow, formatted_date);
-	
+
 	sprintf (buff, "%sT%s", formatted_date, formatted_time);
 }
 
@@ -2652,12 +2662,19 @@ format_current_date (const struct date_format date_fmt,
 	int		seconds_from_midnight
 		= time.hour * 60 * 60 + time.minute * 60 + time.second;
 	cob_decimal	*fractional_second = &d1;
+	int		*offset_time;
 
 	mpz_set_ui (fractional_second->value, (unsigned long) time.nanosecond);
 	fractional_second->scale = 9;
-	
+
+	if (time.offset_known) {
+		offset_time = &time.utc_offset;
+	} else {
+		offset_time = NULL;
+	}
+
 	format_datetime (date_fmt, time_fmt, days, seconds_from_midnight,
-			 fractional_second, time.utc_offset, formatted_datetime);
+			 fractional_second, offset_time, formatted_datetime);
 }
 
 /* Global functions */
@@ -6201,7 +6218,7 @@ cob_intr_formatted_time (const int offset, const int length,
 		goto invalid_args;
 	}
 
-	format_time (format, whole_seconds, fractional_seconds, offset_time,
+	format_time (format, whole_seconds, fractional_seconds, &offset_time,
 		     buff);
 
 	memcpy (curr_field->data, buff, field_length);
@@ -6296,9 +6313,9 @@ cob_intr_formatted_datetime (const int offset, const int length,
 
 	fractional_seconds = &d1;
 	get_fractional_seconds (time_field, fractional_seconds);
-	
+
 	format_datetime (date_fmt, time_fmt, days, whole_seconds,
-			 fractional_seconds, offset_time, buff);
+			 fractional_seconds, &offset_time, buff);
 
 	memcpy (curr_field->data, buff, (size_t) field_length);
 	goto end_of_func;
